config/bookinfo/root/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bookinfo
  labels:
    istio-injection: enabled
    shared-gateway-access: "true"
